Add text scramble decode effect on headings

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <header class="page-header">
         <div class="container">
             <span class="section-label">Welcome Home</span>
-            <h1 class="section-title">About Our Church</h1>
+            <h1 class="section-title text-scramble">About Our Church</h1>
             <p class="section-subtitle">A Christ-centered community rooted in faith, culture, and love.</p>
         </div>
     </header>
@@ -57,7 +57,7 @@
                 <div class="about-grid">
                     <div class="about-welcome reveal">
                         <span class="section-label">Who We Are</span>
-                        <h2>A Place Where Faith<br>Grows Together</h2>
+                        <h2 class="text-scramble">A Place Where Faith<br>Grows Together</h2>
                         <p>
                             At Fox Valley Hmong Baptist Church, we are a Christ-centered community rooted in faith, culture, and love. Whether you've walked with God for decades or are just beginning your journey, you belong here.
                         </p>
@@ -100,7 +100,7 @@
             <div class="container">
                 <div class="section-header reveal">
                     <span class="section-label">What We Believe</span>
-                    <h2 class="section-title">Our Core Values</h2>
+                    <h2 class="section-title text-scramble">Our Core Values</h2>
                     <p class="section-subtitle">The principles that guide our faith and community.</p>
                 </div>
                 <div class="values-grid">
