--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
     <header class="page-header">
         <div class="container">
             <span class="section-label">Reach Out</span>
-            <h1 class="section-title">Contact Us</h1>
+            <h1 class="section-title text-scramble">Contact Us</h1>
             <p class="section-subtitle">Have questions or want to learn more? We'd love to hear from you.</p>
         </div>
     </header>
