--- a/events.html
+++ b/events.html
@@ -42,7 +42,7 @@
     <header class="page-header">
         <div class="container">
             <span class="section-label">What's Happening</span>
-            <h1 class="section-title">Upcoming Events</h1>
+            <h1 class="section-title text-scramble">Upcoming Events</h1>
             <p class="section-subtitle">Stay connected with what God is doing in and through our church.</p>
         </div>
     </header>
