--- a/give.html
+++ b/give.html
@@ -42,7 +42,7 @@
     <header class="page-header">
         <div class="container">
             <span class="section-label">Generosity</span>
-            <h1 class="section-title">Support Our Mission</h1>
+            <h1 class="section-title text-scramble">Support Our Mission</h1>
             <p class="section-subtitle">Your generous giving helps us share the Gospel and grow disciples.</p>
         </div>
     </header>
