--- a/leadership.html
+++ b/leadership.html
@@ -42,7 +42,7 @@
     <header class="page-header">
         <div class="container">
             <span class="section-label">Our Leaders</span>
-            <h1 class="section-title">Church Leadership</h1>
+            <h1 class="section-title text-scramble">Church Leadership</h1>
             <p class="section-subtitle">Faithful servants leading our congregation with love, wisdom, and devotion.</p>
         </div>
     </header>
