--- a/ministries.html
+++ b/ministries.html
@@ -42,7 +42,7 @@
     <header class="page-header">
         <div class="container">
             <span class="section-label">Get Involved</span>
-            <h1 class="section-title">Our Ministries</h1>
+            <h1 class="section-title text-scramble">Our Ministries</h1>
             <p class="section-subtitle">There's a place for everyone to serve, grow, and connect in our church family.</p>
         </div>
     </header>
