--- a/sermons.html
+++ b/sermons.html
@@ -42,7 +42,7 @@
     <header class="page-header">
         <div class="container">
             <span class="section-label">The Word</span>
-            <h1 class="section-title">Recent Sermons</h1>
+            <h1 class="section-title text-scramble">Recent Sermons</h1>
             <p class="section-subtitle">Missed a Sunday? Catch up on recent messages from our pulpit.</p>
         </div>
     </header>
