Link HBNA, SBC, MWBC footer buttons to official sites

--- a/about.html
+++ b/about.html
@@ -146,9 +146,9 @@
                     <h3>Fox Valley Hmong Baptist Church</h3>
                     <p>To fully participate in the fulfillment of the Great Commission. Glorify and Multiply.</p>
                     <div class="footer-affiliations">
-                        <span class="footer-affiliation">HBNA</span>
-                        <span class="footer-affiliation">SBC</span>
-                        <span class="footer-affiliation">MWBC</span>
+                        <a href="https://www.hbna.org/" target="_blank" rel="noopener noreferrer" class="footer-affiliation">HBNA</a>
+                        <a href="https://www.sbc.net/" target="_blank" rel="noopener noreferrer" class="footer-affiliation">SBC</a>
+                        <a href="https://www.mwbc.org/" target="_blank" rel="noopener noreferrer" class="footer-affiliation">MWBC</a>
                     </div>
                 </div>
                 <div class="footer-col">
