Add What We Believe page and link HBNA/SBC/MWBC buttons

--- a/about.html
+++ b/about.html
@@ -102,6 +102,10 @@
                     <span class="section-label">What We Believe</span>
                     <h2 class="section-title text-scramble">Our Core Values</h2>
                     <p class="section-subtitle">The principles that guide our faith and community.</p>
+                    <a href="what-we-believe.html" class="btn btn-outline-dark" style="margin-top: 24px;">
+                        Read Our Full Statement of Faith
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16"><polyline points="9 18 15 12 9 6"/></svg>
+                    </a>
                 </div>
                 <div class="values-grid">
                     <div class="value-card reveal reveal-delay-1">
