--- a/events.html
+++ b/events.html
@@ -106,6 +106,34 @@
                 </div>
             </div>
         </section>
+
+        <!-- ═══════ CALENDAR ═══════ -->
+        <div class="hmong-border"></div>
+        <section class="section" style="background: var(--cream);">
+            <div class="container">
+                <div class="section-header reveal">
+                    <span class="section-label">Church Calendar</span>
+                    <h2 class="section-title text-scramble">Plan Your Visit</h2>
+                    <p class="section-subtitle">Click on a highlighted date to see what's happening.</p>
+                </div>
+                <div class="calendar reveal" id="eventsCalendar">
+                    <div class="calendar-header">
+                        <button class="calendar-nav calendar-prev" aria-label="Previous month">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"/></svg>
+                        </button>
+                        <h3 class="calendar-month"></h3>
+                        <button class="calendar-nav calendar-next" aria-label="Next month">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"/></svg>
+                        </button>
+                    </div>
+                    <div class="calendar-weekdays">
+                        <span>Sun</span><span>Mon</span><span>Tue</span><span>Wed</span><span>Thu</span><span>Fri</span><span>Sat</span>
+                    </div>
+                    <div class="calendar-days"></div>
+                    <div class="calendar-event-detail"></div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- ═══════ FOOTER ═══════ -->
