--- a/events.html
+++ b/events.html
@@ -116,7 +116,7 @@
                     <h2 class="section-title text-scramble">Plan Your Visit</h2>
                     <p class="section-subtitle">Click on a highlighted date to see what's happening.</p>
                 </div>
-                <div class="calendar reveal" id="eventsCalendar">
+                <div class="calendar" id="eventsCalendar">
                     <div class="calendar-header">
                         <button class="calendar-nav calendar-prev" aria-label="Previous month">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"/></svg>
