Remove text scramble and fix mobile issue with logo not navigating to home when clicked

--- a/events.html
+++ b/events.html
@@ -113,7 +113,7 @@
             <div class="container">
                 <div class="section-header reveal">
                     <span class="section-label">Church Calendar</span>
-                    <h2 class="section-title text-scramble">Plan Your Visit</h2>
+                    <h2 class="section-title">Plan Your Visit</h2>
                     <p class="section-subtitle">Click on a highlighted date to see what's happening.</p>
                 </div>
                 <div class="calendar" id="eventsCalendar">
