--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="about-grid">
                     <div class="about-welcome reveal">
                         <span class="section-label">Welcome Home</span>
-                        <h2 class="text-scramble">A Place Where Faith<br>Grows Together</h2>
+                        <h2>A Place Where Faith<br>Grows Together</h2>
                         <p>
                             At Fox Valley Hmong Baptist Church, we are a Christ-centered community rooted in faith, culture, and love. Whether you've walked with God for decades or are just beginning your journey, you belong here.
                         </p>
@@ -159,7 +159,7 @@
             <div class="container">
                 <div class="section-header reveal">
                     <span class="section-label">Join Us</span>
-                    <h2 class="section-title text-scramble">Service Times &amp; Location</h2>
+                    <h2 class="section-title">Service Times &amp; Location</h2>
                     <p class="section-subtitle">We'd love to worship with you. Come as you are — everyone is welcome.</p>
                 </div>
                 <div class="services-grid">
