--- a/what-we-believe.html
+++ b/what-we-believe.html
@@ -57,7 +57,7 @@
                 <div class="about-grid">
                     <div class="about-welcome reveal">
                         <span class="section-label">Our Doctrine</span>
-                        <h2 class="text-scramble">Baptist Faith &amp; Message 2000</h2>
+                        <h2>Baptist Faith &amp; Message 2000</h2>
                         <p>
                             Fox Valley Hmong Baptist Church affirms the <strong>Baptist Faith and Message 2000</strong> as our doctrinal statement. This document summarizes the core beliefs shared by Southern Baptist churches and serves as a guide for our faith and practice.
                         </p>
@@ -111,7 +111,7 @@
             <div class="container">
                 <div class="section-header reveal" style="margin-bottom: 48px;">
                     <span class="section-label">Our Affiliations</span>
-                    <h2 class="section-title text-scramble" style="color: var(--cream);">United in Mission</h2>
+                    <h2 class="section-title" style="color: var(--cream);">United in Mission</h2>
                     <p class="section-subtitle" style="color: rgba(250, 247, 242, 0.6);">We are proudly affiliated with the following organizations.</p>
                 </div>
                 <div class="mission-grid">
